--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "axios": "^1.8.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.5.0",
+    "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-number-format": "^5.4.3",
+    "sonner": "^1.7.2"
   },
   "scripts": {
     "start": "craco start",
@@ -45,6 +47,7 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@types/classnames": "^2.3.4"
   }
 }
