--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^4.10.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "react-number-format": "^5.4.3",
-    "sonner": "^1.7.2"
+    "react-scripts": "5.0.1",
+    "sonner": "^1.7.2",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "craco start",
@@ -42,12 +42,12 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
+    "@types/classnames": "^2.3.4",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "typescript": "^4.9.5",
-    "@types/classnames": "^2.3.4"
+    "typescript": "^4.9.5"
   }
 }
